<resources>
    <string name="app_name">EHTML</string>
    <string name="really_name">努力</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EHTML</string>
    <string name="nav_header_subtitle">www.wetes.cn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">搜索</string>
    <string name="menu_gallery">资料</string>
    <string name="menu_slideshow">列表</string>
    <string name="menu_tools">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_send">联系</string>
    <string name="action_think">
        2.1.2.1版本更新说明\n
        修复了工具栏左右滑动时跳转出错的BUG
        \n\n
        2.1.2版本更新说明\n
        增加了工具栏，标签插入更方便；修复了读取文件时排版紊乱的问题，更正了文件更名显示异常的BUG等；\n\n
        心累呦，好多自己无法解决的问题，比如页内超链接无法访问、<img/>标签内src导入正确路径，图片却无法显示等等，头大，头疼啊。
        鸡肋鸡肋，食之无味，我这软件还是毛病太多，真想像《夏洛特烦恼》里的袁华一样绝望大喊：这道题太难了，我不会！！！（滑小稽）\n\n
        准备再优化一下工具栏，可以自定义那种。特别感谢‘安静的蓝孩子’，他的代码给了我不少启发。
        \n\n
        2.0版本更新说明\n
        界面重新布局、排版美化;增加了“历史记录栏”，自动记录获取过的网址;支持保存多条数据，可自定义保存格式;增加.html文件效果展示功能，
        可以用手机在线编辑网页并查看了;增加了“新建”、“列表”、“联系”选项;支持文件编辑，功能格外强大，支持文件拷贝、删除、选中删除、清空、重命名
        、内容修改等;在线更新功能投入使用;增加了“联系选项",可直接留言;代码优化，若干细节优化\n\n
        挺难为情的，更新太慢了！！！界面虽然大改，但是我的美术功底很内个啥，所以看着很尴尬，等到我自己设计的UI图标一换上，感觉更尴尬了
        。图标改了又改，越改越丑，干脆全给弄没了，换成系统自带的，欲哭无泪啊。资料这方面因为版权问题，我也不好意思抓别人的放上来，随便
        弄又对不起人，先放着吧，容我仔细想想。后续会在编辑界面增加导入图片、开放资料馆、设置等功能，还要设计好图标。
        \n脑袋晕晕的怎么回事o(*ﾟ▽ﾟ*)o\n\n
        1.2.2版本更新说明\n
        非常抱歉，由于我的疏忽，导致1.2的版本出现部分bug，此版本为紧急修复版本，带来的不便之处请见谅。\n\n
        1.2版本更新说明：\n
        修复了安卓9.0版本的适配问题；获取到的HTML源代码重新布局、美化排版；增添了“转换”功能，
        主页面编辑功能移入转换界面；暂时取消了编辑界面的行号显示；代码进一步优化；bug修复\n\n
        跟1.1版本比起来，1.2版本的体积无疑翻了几番，这也是没有办法的事，Eclipse问题突出，如
        果继续用它开发，无疑给适配工作和新功能的增加带来较大的挑战。挤占空间的因素有很多，随着
        “在线更新”、“数据存储”、“知识词条”、“历史记录”、“网址联想”功能的加入，这个APP的体积
        会进一步扩大，我尽量尽量在不影响体验的前提下缩小空间，而且会根据受众群体的比例有选择的
        用Eclipse开发“轻量级”版本供大家下载。\n\n
        自言自语——这些天不是写作业就是就是发呆，清醒了就忙着搭俺滴网站，网站的基本工作已经做好咯。
        APP更新有点迟，不过会慢慢恢复频率嗒。UI已经落实好，应用图标有点丑我知道，兄弟们再忍忍，马上就不用扎眼啦o(╥﹏╥)o\n
        因为时间仓促，版本优化会在后续发布更新\n
        另祝我的宿舍好友亚男生日快乐~[蛋糕][蛋糕]\n\n
        1.1版本更新说明：\n
        	现在是北京时间16:54，时至今日，方知软件开发的不易。
        	特别对一个独立开发者来说（我还算不上一个真正的开发者，自闭Jpg），所需的人力、物力全由自己来扛，如遇技术难题，更是雪上加霜。
        	我这么一个小白，简单的几个功能耗来耗去都觉得头大，何况那些真正的技术功能实现。弱弱为为大牛们点赞比❤~\n\n
        	本次更新实现功能如下：页内源码支持复制粘贴;页内HTML源码标签高亮（部分）;HTML源码页内搜索;编辑功能实现，行号显示，并支持保存和读取（目前仅可保存一条数据，旧数据会被新数据覆盖）\n\n
        	说下我最近的状态，最近事儿着实多，一个计算机等级考试就挤占我好多时间，还有什么讲座之类，课还多，还得按老师要求抄代码（天知道为啥要手抄）、交作业等等，
        	家里的事另说，根本没什么精力来补充安卓知识。好歹清明给了我三天假，这个版本的扩展也就在这两天才实现，所以初版所述构想未能全部完成，实在是精力、时间、技术有限，不好意思。\n在这里不得不吐槽一下Eclipse，用这个开发问题多的真的让我吐血，然而第一版就在这上面完成，转移到AS上无疑又要耗时，
        	时间，实在耗不起啊，没办法。1.2的版本必定是要用AS的，已决定重新架构，一切都要翻新，不然对不起我这为数不多的用户朋友们。\n\n
        	1.2版本构想——实现页内源码真正意义上的排版美化；UI必须美化，low爆鸟；支持保存多条数据；历史记录栏必须加了；全面的HTML知识词条；HTML获取功能进一步强化；支持安卓9.0.2（说来搞笑，我自己的手机点了没反应）；bug修复\n
        	\n特别鸣谢：感谢网络上无私分享知识的朋友们，特别感谢！\n\n
        承蒙关注，小弟感激不尽。然本人经验不足，此应用所涉知识又全由网上自学而来，当属人生中第一款
        稀奇古怪app，疏漏难免，请见谅。
        \n\n关于此APP的话:\n功能——无需访问网页，一键获取网页html;右上角一键浏览器访问网页。\n
        构想——实现页内html源码可复制粘贴;实现页内源码自动排版美化、标签高亮;UI美化;增加html编
        辑和页内搜索功能;增加输入网址历史纪录栏;些许html专业知识整理录入;代码优化,bug修复.\n\n
        经过测试，已知该应用可直接获取大部分网站html源码，小部分出现获取失败状况，正在积极解决此类
        问题。如有意见或其它见解，欢迎直接联系本人QQ:872786829
    </string>
    <string name="action_make">
        【权限|声明】\n
        E-HTML属于HTML类免费软件，绝不会获取用户额外的权限来达到某种不可告人的目的。
        \n在使用过程中，如您需要对文件进行存储等操作，需要同意软件对文件操作的相关权限申请，如果你
        需要使用在线更新这一功能，则需要同意软件安装的相关权限申请。\n\n
        在哪里会使用网络：“获取”、“更新”、“联系”\n\n
        卸载指南：请清空“列表”，并在手机根目录下删除“ehtmldatas"文件夹，即可去除痕迹
        \n\n
        【获取】\n
        在输入框内输入任意符合规范的网址，点击获取按钮便可得到该网址对应的网页源代码，
        若获取失败请检查网址是否有误，或者在“联系”中留言反馈
        \n\n
        【访问】\n
        通过调用浏览器访问所输网址
        \n\n
        【搜索】\n
        页内搜索，高亮显示
        \n\n
        【历史】\n
        可以自动筛选有效网址，优先显示最近的网址，储存在手机目录下"ehtmldatas/internetbars.txt"中，
        你也可通过“列表”进入文件编辑
        \n\n
        【联系】\n
        具有留言板用处，批评建议想法一网打尽
        \n\n
        【效果】\n
        所保存后缀为“.html"的文件可以通过浏览器或本软件查看编辑后效果
        \n\n
        【更新】\n
        开始下载：直接在线下载安装包；暂停下载，再次点击继续下载；删除安装包，在手机文件Download文件夹下;
        检查更新：查看是否最新版本；直接安装：若之前下载好后未安装，可点击直接安装；更新日志；使用说明。
        \n\n
    </string>
</resources>
