<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create0"
            android:icon="@drawable/ic_menu_send"
            android:title="新建" />
        <item
            android:id="@+id/nav_list0"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_menu_send"
            android:title="更新" />
    </group>

    <item android:title="正在发掘">
        <menu>
            <item
                android:id="@+id/nav_ziliao"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_shezhi"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />

        </menu>
    </item>
    <item android:title="测试">
        <menu>
            <item
                android:id="@+id/nav_test11"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />

        </menu>
    </item>
</menu>
